--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Test Portfolio _config.yml title
+description: Test Portfolio _config.yml description
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://harlacherd.github.io/portfolio-test/
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+# aux_links:
+#  Template Repository: https://github.com/just-the-docs/just-the-docs-template
