--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: Test Portfolio _config.yml title
 description: Test Portfolio _config.yml description
 theme: just-the-docs
 
-url: https://harlacherd.github.io/
+url: https://harlacherd.github.io
 
 # aux_links:
 #  Template Repository: https://github.com/just-the-docs/just-the-docs-template
